--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jonathan Rubin Yaniv",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "aws-sdk": "^2.3.9",
+    "body-parser": "^1.15.1",
+    "express": "^4.13.4",
+    "form-data": "^1.0.0-rc4",
+    "morgan": "^1.7.0",
+    "q": "^1.4.1"
+  }
 }
